# market-screenshot-ocr

./: .gitignore  AGENTS.md  LICENSE  README.md  app.py  pyproject.toml
config/: region.sample.json  ro_auto.sample.json
docs/: developer_guide.md
modelscope/: __init__.py
src/: __init__.py  app.py  csv_writer.py  image_loader.py  normalize.py  ocr_engine.py  pipeline.py  preprocess.py  region_selector.py  ro_auto.py  row_splitter.py  settings.py  ui_helpers.py
